fixed wraping issue on student app description

--- a/app/assets/stylesheets/students.css.scss
+++ b/app/assets/stylesheets/students.css.scss
@@ -37,6 +37,7 @@ form#new_student_application, form.edit_student_application, form.new_student_ap
   .student_application_student_phone_type { @include span-columns(6 omega, 12); }
   .student_application_student_organization { @include span-columns(12 omega, 12); }
   .student_application_student_experiences { @include span-columns(6, 12); }
+  .student_application_student_description { @include span-columns(12, 12); }
 
   .experiences-description {
     @include span-columns(6 omega, 12);
